<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="menu_info">Info</string>
    <string name="menu_start">Start game</string>
    <string name="menu_level1">Level 1</string>
    <string name="menu_level2">Level 2</string>
    <string name="menu_level3">Level 3</string>
    <string name="menu_level4">Level 4</string>
    <string name="menu_level5">Level 5</string>
    <string name="menu_level6">Level 6</string>
    <string name="menu_level7">Level 7</string>
    <string name="menu_level8">Level 8</string>
    <string name="menu_level9">Level 9</string>
    <string name="heroic_press_menu">Press menu</string>
    <string name="heroic_light_wins">Light player wins the game</string>
    <string name="heroic_dark_wins">Dark player wins the game</string>
    <string name="app_name">Heroic Quest</string>
</resources>
