<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_start"
          android:icon="@drawable/w_archer"
          android:title="@string/menu_start">
          <menu>
            <item android:id="@+id/level1"
                  android:title="@string/menu_level1" />
            <item android:id="@+id/level2"
                  android:title="@string/menu_level2" />
            <item android:id="@+id/level3"
                  android:title="@string/menu_level3" />
            <item android:id="@+id/level4"
                  android:title="@string/menu_level4" />
            <item android:id="@+id/level5"
                  android:title="@string/menu_level5" />
            <item android:id="@+id/level6"
                  android:title="@string/menu_level6" />
          </menu>
    </item>
    <item android:id="@+id/menu_info"
          android:icon="@drawable/b_summoner"
          android:title="@string/menu_info" />
</menu>